[package]
name = "zg-storage-client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full", "macros"] }
anyhow = "1.0"
async-trait = "0.1"
hex = "0.4"
ethers = { version = "2.0.14", features = ["ws"] }
log = "0.4"
env_logger = "0.9"
serde_json = "1.0.0"
jsonrpsee = { version = "0.14.0", features = ["http-client"] }
serde = { version = "1.0", features = ["derive"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
futures = "0.3"
lazy_static = "1.4"
rayon = "1.7"
tempfile = "3.3"
rand = "0.8.5"
ctor = "0.1.21"
base64 = "0.13.0"