[package]
name = "zg-storage-client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full", "macros"] }
anyhow = "1.0"
async-trait = "0.1"
hex = "0.4"
ethers = { version = "2.0.14", features = ["ws"] }
log = "0.4"
env_logger = "0.9"
serde_json = "1.0.0"
jsonrpsee = { version = "0.14.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
futures = "0.3"
lazy_static = "1.4"
rayon = "1.7"
tempfile = "3.3"
rand = "0.8.5"
ctor = "0.1.21"
base64 = "0.13.0"
url = '2.2'
hex-literal = "0.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
chrono = "0.4"
lru_time_cache = "0.11"
dashmap = "5.0"

[dev-dependencies]
tempfile = "3.2"
mockito = "0.31"
once_cell = "1.20.0"

[patch.crates-io]
# jsonrpsee = { path = "../jsonrpsee-0.14.0/jsonrpsee",  features = ["http-client"]}