[workspace]
members = [
    ".",
    "tests/rust_tests/indexer_test",
    "tests/rust_tests/batch_upload_test",
]

[package]
name = "zg-storage-client"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = { version = "0.8" }
anyhow = { version = "1.0" }
async-trait = { version = "0.1" }
ctr = { version = "0.9" }
base64 = { version = "0.13.0" }
byteorder = { version = "1.4" }
chrono = { version = "0.4" }
clap = { version = "4.0", features = ["derive"] }
ctor = { version = "0.1.21" }
dashmap = { version = "5.0" }
env_logger = { version = "0.9" }
ethers = { version = "2.0.14", features = ["ws"] }
futures = { version = "0.3" }
hex = { version = "0.4" }
hex-literal = { version = "0.3" }
jsonrpsee = { version = "0.14.0", features = ["full"] }
lazy_static = { version = "1.4" }
libp2p = { version = "0.45.1", default-features = false, features = [
    "websocket",
    "identify",
    "mplex",
    "yamux",
    "noise",
    "gossipsub",
    "dns-tokio",
    "tcp-tokio",
    "plaintext",
    "secp256k1",
] }
log = { version = "0.4" }
lru_time_cache = { version = "0.11" }
rand = { version = "0.8.5" }
rayon = { version = "1.7" }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.0" }
sha2 = { version = "0.10" }
tempfile = { version = "3.3" }
thiserror = { version = "1.0" }
tiny-keccak = { version = "2.0", features = ["keccak"] }
tokio = { version = "1.0", features = ["full", "macros"] }
url = { version = "2.2" }
warp = { version = "0.3" }

[dev-dependencies]
mockito = { version = "0.31" }
once_cell = { version = "1.20.0" }
tempfile = { version = "3.2" }

[patch.crates-io]
# jsonrpsee = { path = "../jsonrpsee-0.14.0/jsonrpsee",  features = ["http-client"]}
